# Amplifier-Emulator

GuitarAmp/: CMakeLists.txt
GuitarAmp/Source/: Main.cpp
